// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cspell-config > edit config 1`] = `
"{
  "name": "test-package",
  "cspell": {
    "words": [
      "apple",
      "banana"
    ]
  }
}
"
`;

exports[`cspell-config > edit config 2`] = `
"{
  "name": "test-package",
  "cspell": {
    "words": [
      "apple"
    ]
  }
}
"
`;

exports[`cspell-config > edit config 3`] = `
"{
    // file version
    "version": "0.2",
    "words": [
        "angle", // with comment
        "apple",
        // Before "before"
        "before",
        "cache",
        "zebra" // zebra comment
    ]
}
"
`;

exports[`cspell-config > edit config 4`] = `
"---
# file version
version: '0.2'
words:
  # First Group
  - blue
  - green
  - orange
  - red
  - yellow

  - angle # angle comment
  - apple
  - banana
  # Before "before"
  - before
  - cache # cache comment
  - claw
  - dog
  - elephant
  - zebra # zebra comment

# Last Comment
"
`;
